--- a/src/componentsStyling.css
+++ b/src/componentsStyling.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.cdnfonts.com/css/sega-logo-font');
+
+h1{
+    font-family: 'SEGA LOGO FONT', sans-serif;
+    font-weight: 200;
+    color:#0ccac4;
+}
+
+
 input[type="search"] {
     -webkit-appearance: none;
     -moz-appearance: none;
